Fix issue with Turnitin tables overflowing page

--- a/style/core.css
+++ b/style/core.css
@@ -1053,3 +1053,9 @@ body #chooseform .alloptions .subtype {
     padding-left: 75px;
 }
 
+.mod_turnitintooltwo .dataTables_wrapper table.dataTable th,
+.mod_turnitintooltwo .dataTables_wrapper table.dataTable td {
+  padding-left: 0;
+  padding-right: 0;
+}
+}
